--- a/bio-app-frontent/tsconfig.json
+++ b/bio-app-frontent/tsconfig.json
@@ -12,6 +12,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "declarations.d.ts"  // 👈 Thêm dòng này
   ]
 }
