--- a/bio-app-frontent/package.json
+++ b/bio-app-frontent/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@kolking/react-native-rating": "^1.4.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -43,6 +44,7 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "5.4.0",
