--- a/bio-app-frontent/package.json
+++ b/bio-app-frontent/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "expo": "~53.0.20",
+    "expo-av": "^15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
@@ -38,6 +39,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.540.0",
+    "papaparse": "^5.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
